# labs/backbase/src/main/java/com/backbase/api/common/CreditInfo.java
@@ -7,6 +7,7 @@ import lombok.Setter;
 @Getter
 @Setter
 @NoArgsConstructor
-public class BackbaseFrozenData implements BackbaseData {
-    public static final String VERSION = "1.0";
+public class CreditInfo extends PaymentTypeInfo {
+    private String bankName;
+    private String branchCode;
 }
