# labs/backbase/src/main/java/com/backbase/api/common/PaymentType.java
@@ -1,0 +1,6 @@
+package com.backbase.api.common;
+
+public enum PaymentType {
+    CR,
+    DB
+}
