# labs/backbase/src/main/java/com/backbase/api/common/TransactionInfo.java
@@ -1,0 +1,14 @@
+package com.backbase.api.common;
+
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+public class TransactionInfo implements BackbaseData {
+    private String transactionId;
+    private String date;
+    private PaymentInfo paymentInfo;
+}
